unpackaged/main/default/objects/Account/fields/LTM_EBITDA__c.field-meta.xml
<CustomField>
    <fullName>LTM_EBITDA__c</fullName>
    <label>LTM EBITDA</label>
    <precision>17</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>