unpackaged/main/default/objects/Account/fields/LTM_Proforma_Comments__c.field-meta.xml
<CustomField>
    <fullName>LTM_Proforma_Comments__c</fullName>
    <label>LTM/Proforma Comments</label>
    <length>300</length>
    <type>LongTextArea</type>
</CustomField>