unpackaged/main/default/objects/Account/fields/LTM_Revenue__c.field-meta.xml
<CustomField>
    <fullName>LTM_Revenue__c</fullName>
    <label>LTM Revenue</label>
    <precision>17</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>