unpackaged/main/default/objects/Account/fields/Monitoring_Fee__c.field-meta.xml
<CustomField>
    <fullName>Monitoring_Fee__c</fullName>
    <label>Monitoring Fee</label>
    <precision>17</precision>
    <scale>1</scale>
    <type>Currency</type>
</CustomField>