unpackaged/main/default/objects/Account/fields/Multiple_LTM_EBITDA_at_Entry_With_Fees__c.field-meta.xml
<CustomField>
    <fullName>Multiple_LTM_EBITDA_at_Entry_With_Fees__c</fullName>
    <label>Multiple LTM EBITDA at Entry(With Fees)</label>
    <length>20</length>
    <type>Text</type>
</CustomField>