unpackaged/main/default/objects/Account/fields/Multiple_of_EBITDA_at_Entry_Proforma__c.field-meta.xml
<CustomField>
    <fullName>Multiple_of_EBITDA_at_Entry_Proforma__c</fullName>
    <label>Multiple of EBITDA at Entry – Proforma</label>
    <length>20</length>
    <type>Text</type>
</CustomField>