unpackaged/main/default/objects/Account/fields/Net_Debt_at_Entry__c.field-meta.xml
<CustomField>
    <fullName>Net_Debt_at_Entry__c</fullName>
    <label>Net Debt at Entry</label>
    <precision>17</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>