unpackaged/main/default/objects/Account/fields/Next_Touchpoint_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Touchpoint_Date__c</fullName>
    <formula>CASE(navpeII__Tier__c,


&quot;1&quot;,

IF(DATEVALUE(CreatedDate) &gt;= DATEVALUE(&quot;2023-12-14&quot;), (IF(ISBLANK(navpeII__Last_Touchpoint__c),DATEVALUE(CreatedDate) +90 ,navpeII__Last_Touchpoint__c + 90)),(IF(ISBLANK(navpeII__Last_Touchpoint__c),DATEVALUE(&quot;2023-12-14&quot;) + 90 ,navpeII__Last_Touchpoint__c + 90))),


&quot;2&quot;,

IF(DATEVALUE(CreatedDate) &gt;= DATEVALUE(&quot;2023-12-14&quot;), IF(ISBLANK(navpeII__Last_Touchpoint__c),DATEVALUE(CreatedDate) +120 ,navpeII__Last_Touchpoint__c + 120),IF(ISBLANK(navpeII__Last_Touchpoint__c),DATEVALUE(&quot;2023-12-14&quot;) + 120 ,navpeII__Last_Touchpoint__c + 120)),


&quot;3&quot;,

IF(DATEVALUE(CreatedDate) &gt;= DATEVALUE(&quot;2023-12-14&quot;), IF(ISBLANK(navpeII__Last_Touchpoint__c),DATEVALUE(CreatedDate) +180 ,navpeII__Last_Touchpoint__c + 180),IF(ISBLANK(navpeII__Last_Touchpoint__c),DATEVALUE(&quot;2023-12-14&quot;) + 180 ,navpeII__Last_Touchpoint__c + 180)),


(IF(DATEVALUE(CreatedDate) &gt;= DATEVALUE(&quot;2023-12-14&quot;),IF(ISBLANK(navpeII__Last_Touchpoint__c),DATEVALUE(CreatedDate) +120 ,navpeII__Last_Touchpoint__c + 120),IF(ISBLANK(navpeII__Last_Touchpoint__c),DATEVALUE(&quot;2023-12-14&quot;) + 120 ,navpeII__Last_Touchpoint__c+ 120)))

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Next Touchpoint - Date</label>
    <type>Date</type>
</CustomField>