unpackaged/main/default/objects/Account/fields/Ownership_Fully_Diluted__c.field-meta.xml
<CustomField>
    <fullName>Ownership_Fully_Diluted__c</fullName>
    <label>Ownership Fully Diluted</label>
    <precision>17</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>