unpackaged/main/default/objects/Account/fields/Pipeline_Region__c.field-meta.xml
<CustomField>
    <fullName>Pipeline_Region__c</fullName>
    <label>Pipeline Region</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Europe</fullName>
            </value>
            <value>
                <fullName>USA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>