unpackaged/main/default/objects/Account/fields/Potential_Investment__c.field-meta.xml
<CustomField>
    <fullName>Potential_Investment__c</fullName>
    <label>Potential Investment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>