unpackaged/main/default/objects/Account/fields/Private_Equity_Current__c.field-meta.xml
<CustomField>
    <fullName>Private_Equity_Current__c</fullName>
    <label>Private Equity % (Current)</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>