unpackaged/main/default/objects/Account/fields/Proforma_EBITDA__c.field-meta.xml
<CustomField>
    <fullName>Proforma_EBITDA__c</fullName>
    <label>Proforma EBITDA</label>
    <precision>17</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>