unpackaged/main/default/objects/Account/fields/Public_Filer__c.field-meta.xml
<CustomField>
    <fullName>Public_Filer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Public Filer</label>
    <type>Checkbox</type>
</CustomField>