unpackaged/main/default/objects/Account/fields/Purchased_from_Name__c.field-meta.xml
<CustomField>
    <fullName>Purchased_from_Name__c</fullName>
    <label>Purchased from (Name)</label>
    <length>80</length>
    <type>Text</type>
</CustomField>