unpackaged/main/default/objects/Account/fields/Purchased_from_Type__c.field-meta.xml
<CustomField>
    <fullName>Purchased_from_Type__c</fullName>
    <label>Purchased from (Type)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Corporate</fullName>
            </value>
            <value>
                <fullName>Financial Sponsor</fullName>
            </value>
            <value>
                <fullName>Family -Owned</fullName>
            </value>
            <value>
                <fullName>Refinancing</fullName>
            </value>
            <value>
                <fullName>Public to Private</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>