unpackaged/main/default/objects/Account/fields/Reason_for_Rejection__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Rejection__c</fullName>
    <label>Reason for Rejection</label>
    <length>255</length>
    <type>Text</type>
</CustomField>