unpackaged/main/default/objects/Account/fields/Referral_Source_Description__c.field-meta.xml
<CustomField>
    <fullName>Referral_Source_Description__c</fullName>
    <label>Referral Source Description</label>
    <type>TextArea</type>
</CustomField>