unpackaged/main/default/objects/Account/fields/Referral_Source_Name__c.field-meta.xml
<CustomField>
    <fullName>Referral_Source_Name__c</fullName>
    <label>Referral Source Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>