unpackaged/main/default/objects/Account/fields/Securities_Acquired__c.field-meta.xml
<CustomField>
    <fullName>Securities_Acquired__c</fullName>
    <label>Securities Acquired</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>