unpackaged/main/default/objects/Account/fields/Securities_Disposed__c.field-meta.xml
<CustomField>
    <fullName>Securities_Disposed__c</fullName>
    <label>Securities Disposed</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>