unpackaged/main/default/objects/Account/fields/Security_10__c.field-meta.xml
<CustomField>
    <fullName>Security_10__c</fullName>
    <label>Security 10</label>
    <length>80</length>
    <type>Text</type>
</CustomField>