unpackaged/main/default/objects/Account/fields/Security_1__c.field-meta.xml
<CustomField>
    <fullName>Security_1__c</fullName>
    <label>Security 1</label>
    <length>80</length>
    <type>Text</type>
</CustomField>