unpackaged/main/default/objects/Account/fields/Security_2__c.field-meta.xml
<CustomField>
    <fullName>Security_2__c</fullName>
    <label>Security 2</label>
    <length>80</length>
    <type>Text</type>
</CustomField>