unpackaged/main/default/objects/Account/fields/Separate_Accounts__c.field-meta.xml
<CustomField>
    <fullName>Separate_Accounts__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Separate Accounts ?</label>
    <type>Checkbox</type>
</CustomField>