unpackaged/main/default/objects/Account/fields/Sub_Industry__c.field-meta.xml
<CustomField>
    <fullName>Sub_Industry__c</fullName>
    <label>Sub-Industry</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Industry</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Business Services</fullName>
            </value>
            <value>
                <fullName>Consumer - Apparel</fullName>
            </value>
            <value>
                <fullName>Consumer - Food and Beverage</fullName>
            </value>
            <value>
                <fullName>Consumer - Home Furnishing and Appliances</fullName>
            </value>
            <value>
                <fullName>Consumer - Leisure</fullName>
            </value>
            <value>
                <fullName>Consumer  - Personal Products</fullName>
            </value>
            <value>
                <fullName>Consumer - Retail</fullName>
            </value>
            <value>
                <fullName>Consumer - Other Services</fullName>
            </value>
            <value>
                <fullName>Financial Services</fullName>
            </value>
            <value>
                <fullName>Media and Communications</fullName>
            </value>
            <value>
                <fullName>Niche Industrials - Automobiles</fullName>
            </value>
            <value>
                <fullName>Niche Industrials -  Building Products</fullName>
            </value>
            <value>
                <fullName>Niche Industrials - Chemicals</fullName>
            </value>
            <value>
                <fullName>Niche Industrials - Logistics and Transportation</fullName>
            </value>
            <value>
                <fullName>Niche Industrials - Metals and Mining</fullName>
            </value>
            <value>
                <fullName>Niche Industrials - Paper and Packaging</fullName>
            </value>
            <value>
                <fullName>Niche Industrials - Utilities</fullName>
            </value>
            <value>
                <fullName>Niche Industrials - Other</fullName>
            </value>
            <value>
                <fullName>Other - Environmental</fullName>
            </value>
            <value>
                <fullName>Other - Healthcare</fullName>
            </value>
            <value>
                <fullName>Other - Technology</fullName>
            </value>
            <value>
                <fullName>Other - REITS</fullName>
            </value>
            <value>
                <fullName>Other - Natural Resources</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>