unpackaged/main/default/objects/Account/fields/Target_Allocation_Private_Equity_mn__c.field-meta.xml
<CustomField>
    <fullName>Target_Allocation_Private_Equity_mn__c</fullName>
    <label>Target Allocation - Private Equity (mn)</label>
    <precision>14</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>