unpackaged/main/default/objects/Account/fields/Target_Co_investment_USD_mn__c.field-meta.xml
<CustomField>
    <fullName>Target_Co_investment_USD_mn__c</fullName>
    <label>Target Co-investment (mn)</label>
    <precision>17</precision>
    <scale>1</scale>
    <type>Currency</type>
</CustomField>