unpackaged/main/default/objects/Account/fields/Thematic__c.field-meta.xml
<CustomField>
    <fullName>Thematic__c</fullName>
    <label>Thematic</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Health &amp; Wellness</fullName>
            </value>
            <value>
                <fullName>Orphaned &amp; Underleveraged Brands</fullName>
            </value>
            <value>
                <fullName>Leisure Time as a Priority</fullName>
            </value>
            <value>
                <fullName>Ageing Population</fullName>
            </value>
            <value>
                <fullName>Underleveraged Differentiated Media Content</fullName>
            </value>
            <value>
                <fullName>Advertising Migration from Mass Media to Online &amp; Alternative Channels</fullName>
            </value>
            <value>
                <fullName>Convergence of Communications &amp; Media</fullName>
            </value>
            <value>
                <fullName>Environmental Preservation</fullName>
            </value>
            <value>
                <fullName>Business Process Outsourcing/Support</fullName>
            </value>
            <value>
                <fullName>Audit/Regulatory Oversight</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>