unpackaged/main/default/objects/Account/fields/Total_Actual_Fees__c.field-meta.xml
<CustomField>
    <fullName>Total_Actual_Fees__c</fullName>
    <formula>Total_Actual_Fees_RollUp__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Actual Fees</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Currency</type>
</CustomField>