unpackaged/main/default/objects/Account/fields/Total_Actual_Fees_RollUp__c.field-meta.xml
<CustomField>
    <fullName>Total_Actual_Fees_RollUp__c</fullName>
    <label>Total Actual Fees RollUp</label>
    <summarizedField>Advisor_Involvement__c.Diligence_Expense_Actuals_USD__c</summarizedField>
    <summaryForeignKey>Advisor_Involvement__c.Legal_Name__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>