unpackaged/main/default/objects/Account/fields/Total_Amount_of_Equity_Invested__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_of_Equity_Invested__c</fullName>
    <formula>Equity_Invested_Initial__c  + Equity_Invested_FollowOn1__c  +  Equity_Invested_FollowOn2__c  +  Equity_Invested_FollowOn3__c  +   Total_Management_Equity_Invested_Initial__c  +  Total_Mgmt_Equity_Invested_FollowOn1__c  +  Total_Mgmt_Equity_Invested_FollowOn2__c  +  Total_Mgmt_Equity_Invested_FollowOn3__c  +  Total_Exec_Fund_Co_investment_Initial__c  +  Total_Exe_Fund_Co_investment_FollowOn1__c  +  Total_Exe_Fund_Co_investment_FollowOn2__c  +  Total_Exe_Fund_Co_investment_FollowOn3__c  +  Total_LP_Co_investments_FollowOn1__c  +  Total_LP_Co_investments_FollowOn2__c  +  Total_LP_Co_investments_FollowOn3__c  +  Total_LP_Co_investments_Initial__c  +  Total_Other_Equity_FollowOn1__c  +  Total_Other_Equity_FollowOn2__c  +   Total_Other_Equity_FollowOn3__c  +  Total_Other_Equity_Initial__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Amount of Equity Invested</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Currency</type>
</CustomField>