unpackaged/main/default/objects/Account/fields/Total_Co_investment_Commitments__c.field-meta.xml
<CustomField>
    <fullName>Total_Co_investment_Commitments__c</fullName>
    <label>Total Co-investment Commitments</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>