unpackaged/main/default/objects/Account/fields/Total_Commitments_USD_mn__c.field-meta.xml
<CustomField>
    <fullName>Total_Commitments_USD_mn__c</fullName>
    <formula>Total_Fund_Commitments_USD_mn__c + Total_Co_investment_Commitments_USD_mn__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Commitments (mn)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>