unpackaged/main/default/objects/Account/fields/Total_Due_Deligence__c.field-meta.xml
<CustomField>
    <fullName>Total_Due_Deligence__c</fullName>
    <label>Total Due Deligence</label>
    <summarizedField>Advisor_Involvement__c.Diligence_Budget_USD__c</summarizedField>
    <summaryForeignKey>Advisor_Involvement__c.Legal_Name__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>