unpackaged/main/default/objects/Account/fields/Total_Equity_at_Entry__c.field-meta.xml
<CustomField>
    <fullName>Total_Equity_at_Entry__c</fullName>
    <label>Total Equity at Entry</label>
    <precision>17</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>