unpackaged/main/default/objects/Account/fields/Total_Exe_Fund_Co_investment_FollowOn3__c.field-meta.xml
<CustomField>
    <fullName>Total_Exe_Fund_Co_investment_FollowOn3__c</fullName>
    <label>Total Exe Fund Co-investment - FollowOn3</label>
    <precision>17</precision>
    <scale>1</scale>
    <type>Currency</type>
</CustomField>