unpackaged/main/default/objects/Account/fields/Total_Exec_Fund_Co_investment_Initial__c.field-meta.xml
<CustomField>
    <fullName>Total_Exec_Fund_Co_investment_Initial__c</fullName>
    <label>Total Exec Fund Co-investment - Initial</label>
    <precision>17</precision>
    <scale>1</scale>
    <type>Currency</type>
</CustomField>