unpackaged/main/default/objects/Account/fields/Total_Fees__c.field-meta.xml
<CustomField>
    <fullName>Total_Fees__c</fullName>
    <label>Total Fees</label>
    <precision>17</precision>
    <scale>1</scale>
    <type>Currency</type>
</CustomField>