unpackaged/main/default/objects/Account/fields/Total_Fund_Commitments__c.field-meta.xml
<CustomField>
    <fullName>Total_Fund_Commitments__c</fullName>
    <label>Total Fund Commitments</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>