unpackaged/main/default/objects/Account/fields/Total_Funds_under_Management_mn__c.field-meta.xml
<CustomField>
    <fullName>Total_Funds_under_Management_mn__c</fullName>
    <label>Total Funds under Management (mn)</label>
    <precision>15</precision>
    <scale>1</scale>
    <type>Currency</type>
</CustomField>