unpackaged/main/default/objects/Account/fields/Total_LP_Co_investments_FollowOn1__c.field-meta.xml
<CustomField>
    <fullName>Total_LP_Co_investments_FollowOn1__c</fullName>
    <label>Total LP Co-investments - FollowOn1</label>
    <precision>17</precision>
    <scale>1</scale>
    <type>Currency</type>
</CustomField>