unpackaged/main/default/objects/Account/fields/Total_LP_Co_investments_FollowOn3__c.field-meta.xml
<CustomField>
    <fullName>Total_LP_Co_investments_FollowOn3__c</fullName>
    <label>Total LP Co-investments - FollowOn3</label>
    <precision>17</precision>
    <scale>1</scale>
    <type>Currency</type>
</CustomField>