unpackaged/main/default/objects/Account/fields/Total_Management_Equity_Invested_Initial__c.field-meta.xml
<CustomField>
    <fullName>Total_Management_Equity_Invested_Initial__c</fullName>
    <label>Total Management Equity Invested-Initial</label>
    <precision>17</precision>
    <scale>1</scale>
    <type>Currency</type>
</CustomField>