unpackaged/main/default/objects/Account/fields/Total_Mgmt_Equity_Invested_FollowOn3__c.field-meta.xml
<CustomField>
    <fullName>Total_Mgmt_Equity_Invested_FollowOn3__c</fullName>
    <label>Total Mgmt Equity Invested - FollowOn3</label>
    <precision>17</precision>
    <scale>1</scale>
    <type>Currency</type>
</CustomField>