unpackaged/main/default/objects/Account/fields/Total_number_of_Board_Seats__c.field-meta.xml
<CustomField>
    <fullName>Total_number_of_Board_Seats__c</fullName>
    <label>Total number of Board Seats</label>
    <length>20</length>
    <type>Text</type>
</CustomField>