unpackaged/main/default/objects/Account/fields/Total_Other_Equity_FollowOn2__c.field-meta.xml
<CustomField>
    <fullName>Total_Other_Equity_FollowOn2__c</fullName>
    <label>Total Other Equity - FollowOn2</label>
    <precision>17</precision>
    <scale>1</scale>
    <type>Currency</type>
</CustomField>