unpackaged/main/default/objects/Account/fields/Transaction_Fee__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Fee__c</fullName>
    <label>Transaction Fee</label>
    <precision>17</precision>
    <scale>1</scale>
    <type>Currency</type>
</CustomField>