unpackaged/main/default/objects/Account/fields/Transaction_Size_Without_Fees_Expenses__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Size_Without_Fees_Expenses__c</fullName>
    <label>Transaction Size Without Fees/Expenses</label>
    <precision>17</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>