unpackaged/main/default/objects/Account/fields/Typical_Invest_mn__c.field-meta.xml
<CustomField>
    <fullName>Typical_Invest_mn__c</fullName>
    <label>Typical Invest (mn)</label>
    <length>10</length>
    <type>Text</type>
</CustomField>