unpackaged/main/default/objects/Account/fields/Vintage__c.field-meta.xml
<CustomField>
    <fullName>Vintage__c</fullName>
    <label>Vintage</label>
    <length>4</length>
    <type>Text</type>
</CustomField>