unpackaged/main/default/objects/Account/recordTypes/Advisor.recordType-meta.xml
<RecordType>
    <fullName>Advisor</fullName>
    <active>true</active>
    <label>Advisor</label>
</RecordType>