unpackaged/main/default/objects/Account/recordTypes/Company.recordType-meta.xml
<RecordType>
    <fullName>Company</fullName>
    <active>true</active>
    <description>A Company is an operating asset that is a potential acquisition / investment target.</description>
    <label>Company</label>
</RecordType>