unpackaged/main/default/objects/Account/recordTypes/Fund_Manager.recordType-meta.xml
<RecordType>
    <fullName>Fund_Manager</fullName>
    <active>true</active>
    <description>A fund house that is managing different funds.</description>
    <label>Fund Manager</label>
</RecordType>