unpackaged/main/default/objects/Account/recordTypes/Fund_Manager_s_Fund.recordType-meta.xml
<RecordType>
    <fullName>Fund_Manager_s_Fund</fullName>
    <active>true</active>
    <description>A fund managed by a fund manager.</description>
    <label>Fund Manager’s Fund</label>
</RecordType>