unpackaged/main/default/objects/Account/recordTypes/Individual_Investor.recordType-meta.xml
<RecordType>
    <fullName>Individual_Investor</fullName>
    <active>false</active>
    <description>An Individual Investor is a high net worth existing or prospective investor.</description>
    <label>Individual Investor</label>
</RecordType>