unpackaged/main/default/objects/Account/recordTypes/Institution.recordType-meta.xml
<RecordType>
    <fullName>Institution</fullName>
    <active>true</active>
    <label>Institution</label>
</RecordType>