unpackaged/main/default/objects/Account/recordTypes/Intermediary.recordType-meta.xml
<RecordType>
    <fullName>Intermediary</fullName>
    <active>true</active>
    <description>An Intermediary is a financial services firm that negotiates sell-side or buy-side transactions (e.g. investment banks, brokerages, advisors etc.)</description>
    <label>Intermediary</label>
</RecordType>