unpackaged/main/default/objects/Account/recordTypes/Lender.recordType-meta.xml
<RecordType>
    <fullName>Lender</fullName>
    <active>true</active>
    <description>A Lender is an investment firm specializing in lending or debt investments (e.g., mezzanine or distressed debt funds).</description>
    <label>Lender</label>
</RecordType>