unpackaged/main/default/objects/Account/recordTypes/LimitedPartner.recordType-meta.xml
<RecordType>
    <fullName>LimitedPartner</fullName>
    <active>true</active>
    <description>A Limited Partner is the legal entity that the Investor uses to invest in your funds. Each Limited Partner entity has to be linked to an Institution.</description>
    <label>Limited Partner</label>
</RecordType>