unpackaged/main/default/objects/Account/recordTypes/Portfolio_Company.recordType-meta.xml
<RecordType>
    <fullName>Portfolio_Company</fullName>
    <active>true</active>
    <description>A Portfolio Company is an operating asset that is currently or historically part of your firm’s portfolio.</description>
    <label>Portfolio Company</label>
</RecordType>