unpackaged/main/default/objects/Account/recordTypes/Private_Equity.recordType-meta.xml
<RecordType>
    <fullName>Private_Equity</fullName>
    <active>true</active>
    <label>Private Equity</label>
</RecordType>