unpackaged/main/default/objects/Account/recordTypes/Property.recordType-meta.xml
<RecordType>
    <fullName>Property</fullName>
    <active>true</active>
    <description>A Property represents all your target real estate investments (potential, existing or historical deals) and your current portfolio.</description>
    <label>Property</label>
</RecordType>