unpackaged/main/default/objects/Account/listViews/All_Advisors.listView-meta.xml
<ListView>
    <fullName>All_Advisors</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>navpeII__Entity_Type__c</columns>
    <columns>ACCOUNT.ADDRESS1_CITY</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.URL</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Advisor</value>
    </filters>
    <label>All Advisors</label>
</ListView>