unpackaged/main/default/objects/Account/listViews/All_Companies.listView-meta.xml
<ListView>
    <fullName>All_Companies</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.RECORDTYPE</columns>
    <columns>Status__c</columns>
    <columns>Thematic__c</columns>
    <columns>GIC_Codes__c</columns>
    <columns>Target_Co_investment_USD_mn__c</columns>
    <columns>Total_Co_investment_Commitments_USD_mn__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Company</value>
    </filters>
    <label>All Companies</label>
</ListView>