unpackaged/main/default/objects/Account/listViews/All_Fund_Manager_s_Funds.listView-meta.xml
<ListView>
    <fullName>All_Fund_Manager_s_Funds</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.RECORDTYPE</columns>
    <columns>PARENT_NAME</columns>
    <columns>Status__c</columns>
    <columns>Fund_Strategy__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Fund_Manager_s_Fund</value>
    </filters>
    <label>All Fund Manager&#39;s Funds</label>
</ListView>