unpackaged/main/default/objects/Account/listViews/All_Fund_Managers.listView-meta.xml
<ListView>
    <fullName>All_Fund_Managers</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.RECORDTYPE</columns>
    <columns>ACCOUNT.EMPLOYEES</columns>
    <columns>ACCOUNT.SALES</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.PHONE2</columns>
    <columns>ACCOUNT.URL</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Fund_Manager</value>
    </filters>
    <label>All Fund Managers</label>
</ListView>